duvidas e sobre nos

--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -1,32 +1,145 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Sobre Nós</title>
-</head>
-<body>
-    <header>
-        <div class="header-content">
-            <a href="index.html"><img src="logo.png" alt="Logo EcoBio" class="logo"></a>
-            <a href="index.html"><h1>Sobre Nós</h1></a>
-            <nav>
-                <a href="index.html" class="btn cinza">Página Inicial</a>
-                <a href="organismo.html" class="btn cinza">Organismo</a>
-                <a href="biosfera.html" class="btn cinza">Biosfera</a>
-                <a href="ecologia.html" class="btn cinza">Ecologia</a>
-                <a href="ecossistema.html" class="btn cinza">Ecossistema</a>
-                <a href="sobre-nos.html" class="btn cinza">Sobre Nós</a>
-                <a href="duvidas.html" class="btn pequeno">Dúvidas</a>
-            </nav>
-        </div>
-    </header>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+        }
 
-    <main>
-        <h2>Sobre Nós</h2>
-        <p>Conheça os 5 integrantes do grupo e suas contribuições para o projeto.</p>
-        <a href="duvidas.html" class="btn pequeno">Dúvidas</a>
-    </main>
+        .header {
+            background-color: #4CAF50;
+            background: url(./folhas.jpeg);
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            height: 100px;
+        }
+
+        .header a {
+            color: white;
+            text-decoration: none;
+            font-size: 50px;
+            height: 50px;
+        }
+
+        .container {
+            padding: 60px 20px 20px 20px;
+            /* Padding top para compensar a header fixa */
+            text-align: center;
+        }
+
+        .founders {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .founder {
+            margin: 20px;
+            text-align: center;
+        }
+
+        .founder-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            overflow: hidden;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+
+        .founder-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .founder-name {
+            font-weight: bold;
+            font-size: 16px;
+            color: #333;
+        }
+
+        .about-text {
+            margin-top: 20px;
+            line-height: 1.6;
+            color: #333;
+        }
+
+        footer {
+            margin-top: 30px;
+            font-size: 14px;
+            color: #777;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="header">
+        <a href="index.html">SOBRE NÓS</a>
+    </div>
+
+    <div class="container">
+        <h1>Nossos Fundadores</h1>
+
+        <div class="founders">
+            <div class="founder">
+                <div class="founder-photo">
+                    <img src="teste.jpg" alt="Fundador 1">
+                </div>
+                <div class="founder-name">Gabriel Pio</div>
+            </div>
+            <div class="founder">
+                <div class="founder-photo">
+                    <img src="maricota.jpeg" alt="Fundador 2">
+                </div>
+                <div class="founder-name">Maria Vitória</div>
+            </div>
+            <div class="founder">
+                <div class="founder-photo">
+                    <img src="lavinoa.jpeg" alt="Fundador 3">
+                </div>
+                <div class="founder-name">Lavínia Reis</div>
+            </div>
+            <div class="founder">
+                <div class="founder-photo">
+                    <img src="teste.jpg" alt="Fundador 4">
+                </div>
+                <div class="founder-name">Gabriel Porsi</div>
+            </div>
+            <div class="founder">
+                <div class="founder-photo">
+                    <img src="marcolaolebron.jpeg" alt="Fundador 5">
+                </div>
+                <div class="founder-name">Marcos Vital</div>
+            </div>
+        </div>
+
+        <div class="about-text">
+            <h2>Sobre o Nosso Site</h2>
+            <p>Bem-vindo ao nosso site! Somos uma equipe dedicada a fornecer conteúdos de qualidade e serviços
+                excepcionais. Nosso objetivo é criar uma comunidade engajada e informada, oferecendo recursos úteis e
+                informações relevantes. Cada um de nossos fundadores traz uma experiência única e valiosa para o time, e
+                estamos entusiasmados em compartilhar nossa paixão e conhecimento com você. Agradecemos por visitar
+                nossa página e esperamos que você encontre o que procura!</p>
+        </div>
+    </div>
+
+    <footer>
+        &copy; 2024 Nossa Empresa. Todos os direitos reservados.
+    </footer>
 </body>
+
 </html>
