--- a/duvidas.html
+++ b/duvidas.html
@@ -12,7 +12,7 @@
             <button class="title" onclick="window.location.href='index.html'">Dúvidas Frequentes</button>
             <div class="nav-buttons">
                 <button onclick="window.location.href='index.html'">Página Inicial</button>
-                <button onclick="window.location.href='conteudos.html'">Conteúdos</button>
+                <button onclick="window.location.href='index.html'">Conteúdos</button>
                 <button onclick="window.location.href='sobre-nos.html'">Sobre Nós</button>
                 <button class="active" onclick="window.location.href='duvidas.html'">Dúvidas</button>
             </div>
@@ -32,8 +32,8 @@
     </main>
 
     <footer>
-        <a href="https://instagram.com/seu_perfil" target="_blank" class="contact">Entre em Contato</a>
-        <a href="https://instagram.com/seu_perfil" target="_blank" class="instagram-logo">
+        <a href="https://instagram.com/ecobiosite" target="_blank" class="contact">Entre em Contato</a>
+        <a href="https://instagram.com/ecobiosite" target="_blank" class="instagram-logo">
             <img src="instagram.jpeg" alt="Instagram Logo">
         </a>
     </footer>
