--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -8,6 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            font-weight: bold;
             margin: 0;
             padding: 0;
             background-color: #fff;
