finalizado de vdd agr

--- a/duvidas.html
+++ b/duvidas.html
@@ -48,13 +48,13 @@
     <script>
         function showAnswer(answerId) {
             const answers = {
-                'answer1': 'Nós oferecemos diversos recursos educacionais, incluindo artigos, vídeos e quizzes interativos. Todos os materiais são acessíveis através do menu de navegação.',
-                'answer2': 'Para acessar os materiais de estudo, visite a seção “Recursos” do nosso site e faça login com sua conta para ter acesso completo.',
-                'answer3': 'Sim, oferecemos uma variedade de guias e tutoriais para ajudar nos estudos. Eles estão disponíveis na seção “Guias” do nosso site.',
-                'answer4': 'As fontes utilizadas para criar o conteúdo educacional incluem livros acadêmicos, artigos científicos e especialistas na área.',
-                'answer5': 'Sim, você pode sugerir tópicos ou temas através do nosso formulário de sugestões disponível na seção “Contato”.',
-                'answer6': 'Para compartilhar feedback ou fazer perguntas, utilize o formulário de contato na seção “Contato” do site.',
-                'answer7': 'Oferecemos recursos de estudo adaptados para diferentes níveis de escolaridade, desde o ensino fundamental até o superior.'
+                'answer1': 'Este site oferece uma variedade de recursos educacionais, incluindo vídeos aulas, mapas mentais, jogos interativos e textos informativos.',
+                'answer2': 'Os materiais de estudo estão disponíveis para acesso diretamente no site, onde você pode navegar pelos diferentes recursos e escolher o que deseja explorar.',
+                'answer3': 'Sim, além dos materiais de estudo, o site também fornece guias e tutoriais para auxiliar os estudantes no processo de aprendizagem.',
+                'answer4': 'O conteúdo educacional é desenvolvido por especialistas em educação e é baseado em fontes confiáveis e atualizadas.',
+                'answer5': 'Sim, você pode enviar sugestões de tópicos ou temas para serem abordados no site. Sua contribuição é valorizada e pode ajudar a melhorar a experiência de aprendizado para todos.',
+                'answer6': 'Você pode compartilhar feedback ou fazer perguntas através de nossa seção de contato ou de nossas redes sociais. Estamos sempre abertos a ouvir nossos usuários e melhorar nossa plataforma.',
+                'answer7': ' Sim, nosso site oferece recursos de estudo para uma ampla gama de níveis de escolaridade, desde o ensino fundamental até o ensino superior.'
             };
 
             const answerContainer = document.getElementById('overlay-text');
